--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/mrzealot/extension-vet#readme",
   "dependencies": {
     "espree": "^4.0.0",
-    "estraverse": "^4.2.0"
+    "estraverse": "^4.2.0",
+    "extract-zip": "^1.6.7",
+    "rimraf": "^2.6.2",
+    "unzip-crx": "^0.2.0"
   }
 }
